--- a/views/info_incident.xml
+++ b/views/info_incident.xml
@@ -28,6 +28,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
+                    <button name="get_users_" string="click" type="object" class="oe_highlight"/>
                 <field name="info_state" widget="statusbar" options="{'clickable': '1'}"/>
                 </header>
                 <sheet>
@@ -51,7 +52,8 @@
                             <field name="info_assignement_group_id"/>
                             <field name="info_assigned_to"  />
                             <field name="info_reason" attrs="{'invisible': [('info_state','!=','onhold')]}" />
-                            <!-- <field name="role_id" invisible="1" /> -->
+                            <!-- <field name="role_id" invisible="0" /> -->
+                            <!-- <field name="test" invisible="0" /> -->
                         </group>
                         <group>
                         <field name="info_short_desc"/>
